<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="main_activity_title">My Nanodegree Apps!</string>
    <string name="main_activity_btn_spotify_app">SPOTIFY STREAMER</string>
    <string name="main_activity_btn_spotify_app_toast">This button will launch my Spotify streamer app!</string>
    <string name="main_activity_btn_scores_app">SCORES APP</string>
    <string name="main_activity_btn_scores_app_toast">This button will launch my Scores app!</string>
    <string name="main_activity_btn_library_app">LIBRARY APP</string>
    <string name="main_activity_btn_library_app_toast">This button will launch my Library app!</string>
    <string name="main_activity_btn_buildit_app">BUILD IT BIGGER</string>
    <string name="main_activity_btn_buildit_app_toast">This button will launch my Build It Bigger app!</string>
    <string name="main_activity_btn_xyzreader_app">XYZ READER</string>
    <string name="main_activity_btn_xyzreader_app_toast">This button will launch my XYZ reader app!</string>
    <string name="main_activity_btn_myown_app">CAPSTONE: MY OWN APP</string>
    <string name="main_activity_btn_myown_app_toast">This button will launch my capstone app!</string>
</resources>
